src/snapshots/afrotd__parser__tests__interpretation_3.1.3_3.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 1
  - 3
index: 3
text: "Während der ersten Ballbesitz-Serie einer Extraperiode versucht\nTeam A, ein Fieldgoal zu erzielen. Der Kick wird abgeblockt und überquert nicht die neutrale Zone. Team A recovert den Ball und advanct\nzu einem Touchdown."
ruling: "Sechs Punkte für Team A. Team B\nbeginnt seine Ballbesitz-Serie nach dem Try."
