src/snapshots/afrotd__parser__tests__interpretation_3.1.3_4.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 1
  - 3
index: 4
text: "Team A versucht ein Fieldgoal. Der Kick wird abgeblockt und\nüberquert nicht die neutrale Zone. Team A recovert den Ball und wird\njenseits der Line to Gain getackelt."
ruling: "Team A behält den Ball,\num seine Ballbesitz-Serie fortzusetzen. First Down und 10."
