src/snapshots/afrotd__parser__tests__interpretation_3.1.3_5.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 1
  - 3
index: 5
text: "Beim ersten, zweiten oder dritten Down wird Team A’s Fieldgoalversuch geblockt und überquert nicht die neutrale Zone. A23 recovert\nden Ball und wird kurz vor der Line to Gain getackelt."
ruling: "Team\nA’s Ball, nächster Down."
