src/snapshots/afrotd__parser__tests__interpretation_3.1.3_6.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 1
  - 3
index: 6
text: "Während der ersten Ballbesitz-Serie einer Extraperiode verliert\nTeam B, nachdem es in Ballbesitz gekommen war, den Ballbesitz an\nTeam A. Team A (a) erzielt einen Touchdown; (b) erzielt keine Punkte."
ruling: (a) Die Punkte zählen. In (a) und (b) ist Team A’s BallbesitzSerie vorüber und Team B beginnt seine Ballbesitz-Serie.
