src/snapshots/afrotd__parser__tests__interpretation_3.1.3_7.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 1
  - 3
index: 7
text: Während der ersten Ballbesitz-Serie in einer Extraperiode fumbelt Team A beim zweiten Down und der Ball rollt in Team B’s Endzone. Team B recovert den Ball und bleibt in seiner Endzone.
ruling: "Team A’s Ballbesitz-Serie ist vorüber. Team B’s Ballbesitz-Serie\nbeginnt."
