src/snapshots/afrotd__parser__tests__interpretation_3.1.3_8.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 1
  - 3
index: 8
text: "Während der ersten Ballbesitz-Serie in einer Extraperiode fängt\nB10 einen Vorwärtspass an der B-6 ab und kniet sich in seiner Endzone\nhin."
ruling: "Safety. Zwei Punkte für Team A. Team A’s BallbesitzSerie ist vorüber. Team B bringt den Ball ins Spiel, 1. und 10 von der\n25-Meterlinie an der gleichen Spielfeldseite."
