src/snapshots/afrotd__parser__tests__interpretation_3.1.3_9.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 1
  - 3
index: 9
text: "Team A’s Fieldgoalversuch ist jenseits der neutralen Zone unberührt, bis B17 den Ball an der B-5 berührt. A75 recovert den Ball\nan der B-3."
ruling: "Team A’s Ballbesitz-Serie wird fortgesetzt. First\nDown für Team A an der B-3."
