src/snapshots/afrotd__parser__tests__interpretation_3.2.2_1.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 2
  - 2
index: 1
text: "Am Ende der ersten Halbzeit ist der Punktestand 56:0. Die Head\nCoaches und der Referee kommen überein, dass die dritte und die vierte Spielperiode jeweils auf zehn Minuten verkürzt werden. Die Head\nCoaches verlangen außerdem, dass die zweite Halbzeit mit einer „laufenden Uhr“ gespielt werden soll, dass die Game Clock also nicht angehalten werden soll."
ruling: "Die verbleibenden Spielperioden können verkürzt werden. Die „laufende Uhr“ wird jedoch nicht erlaubt. Es\ngelten für das gesamte Spiel die normalen Regeln bezüglich der Game Clock. Ausgenommen davon sind Spiele, in denen gemäß BSO die\nMercy Rule angewandt wird."
