src/snapshots/afrotd__parser__tests__interpretation_3.2.3_3.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 2
  - 3
index: 3
text: "Während eines Fieldgoalversuchs läuft die Spielzeit am Ende\nder zweiten Spielperiode aus. Team B war Offside."
ruling: "Strafe – 5 Meter vom Previous Spot, die Periode wird verlängert (Regel\n10.2.2.d.4.a)"
