src/snapshots/afrotd__parser__tests__interpretation_3.2.3_4.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 2
  - 3
index: 4
text: "Während in der ersten Spielperiode die Spielzeit ausläuft, behindert ein Team A-Spieler einen Gegner beim Fangen eines Kicks\n(nicht beim Try)."
ruling: "Strafe – 15 Meter vom Spot of Foul. Die\nSpielperiode wird nicht verlängert und die Strafe wird zu Beginn der\nzweiten Spielperiode durchgeführt."
